--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -53,7 +53,7 @@ chord-diagram-toggle button:checked:hover {
 
 .fretboard-chord-name-entry entry {
   font-size: 1.8rem;
-  padding: 6px;
+  padding: 8px 6px;
   font-weight: bold;
   border-radius: 12px;
 }
